--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="container" style="margin-top: 100px;">
   <p class="text-center">Copyright @2016 Rails103
     <br>Design by
-    <a href="http://courses.growthschool.com/courses/rails-103" target=_new>Ren</a>
+    <a href="http://courses.growthschool.com/courses/rails-103/" target=_new>Ren</a>
   </p>
 </footer>
